bug-034396-fixed scrollbar issue on jultiple pages

--- a/admin-application/views/common-css/designer.css
+++ b/admin-application/views/common-css/designer.css
@@ -951,3 +951,8 @@ table.table-bordered tr:nth-child(odd) td {
     color: #fff;
     background-color: #212529;
 }
+
+.custom-ui-autocomplete {
+  max-height: 300px;
+  overflow: hidden;  
+  overflow-y: auto; }
